--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ sorl-thumbnail==12.8.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
-boto3
-django_storages
-drf-yasg
+boto3==1.21.39
+django-storages==1.12.3
+drf-yasg==1.20.0
+gunicorn
