--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ sorl-thumbnail==12.8.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
+drf-yasg==1.20.0
+django-storages==1.12.3
+gunicorn==20.1.0
