--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 boto3==1.21.37
 botocore==1.24.37
+django-cors-headers==3.11.0
 Django==4.0.3
 djangorestframework==3.13.1
 djangorestframework-camel-case==1.3.0
@@ -15,6 +16,6 @@ sorl-thumbnail==12.8.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
-django-storages==1.12.3
 drf-yasg==1.20.0
-gunicorn
+django-storages==1.12.3
+gunicorn==20.1.0
