--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,10 @@ services:
       - DB_HOST
       - DB_PORT
       - HOST
+      - KAKAO_REST_API_KEY
+      - KAKAO_REDIRECT_URI
+      - KAKAO_SECRET_KEY
+      - KAKAO_ADMIN_KEY
 
 networks:
   network:
@@ -60,4 +64,12 @@ secrets:
   DB_PORT:
     external: true
   HOST:
+    external: true
+  KAKAO_REST_API_KEY:
+    external: true
+  KAKAO_REDIRECT_URI:
+    external: true
+  KAKAO_SECRET_KEY:
+    external: true
+  KAKAO_ADMIN_KEY:
     external: true
