--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,10 @@ services:
       - DB_HOST
       - DB_PORT
       - HOST
+      - KAKAO_REST_API_KEY
+      - KAKAO_REDIRECT_URI
+      - KAKAO_SECRET_KEY
+      - KAKAO_ADMIN_KEY
 
 networks:
   network:
@@ -48,6 +52,14 @@ secrets:
   MY_AWS_SECRET_ACCESS_KEY:
     external: true
   MY_AWS_ACCESS_KEY_ID:
+    external: true
+  KAKAO_REST_API_KEY:
+    external: true
+  KAKAO_REDIRECT_URI:
+    external: true
+  KAKAO_SECRET_KEY:
+    external: true
+  KAKAO_ADMIN_KEY:
     external: true
   DB_NAME:
     external: true
