--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
+          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
           username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
       # Build the docker image and push it.
@@ -27,7 +27,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.REGISTRY }}/seeyaarchive-server:${{ github.sha }}
+          tags: seeyaarchive-server:${{ github.sha }}
 
   #  Name of the job is deploy
   deploy:
@@ -79,5 +79,5 @@ jobs:
 
 
           docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} rm -f seeyaarchive-server
-          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} run -d --name seeyaarchive-server -p 80:8000 --env-file .env ${{ secrets.REGISTRY }}/seeyaarchive-server:${{ github.sha }}
+          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} run -d --name seeyaarchive-server -p 80:8000 --env-file .env seeyaarchive-server:${{ github.sha }}
         shell: bash
