--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,11 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
+          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
           username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCOUNT_IDS: ${{ secrets.REGISTRY }}
       # Build the docker image and push it.
       - name: Build image
         uses: docker/build-push-action@v2
@@ -43,6 +45,8 @@ jobs:
           registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com
           username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
           password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+        env:
+          AWS_ACCOUNT_IDS: ${{ secrets.REGISTRY }}
 
       # SSH into the server
       - name: executing remote ssh commands using ssh key
