--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,19 +15,19 @@ jobs:
       # Login to docker
       # This can be used for both Docker Hub and
       # GitHub container registry.
-      - name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
-          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
-      # Build the docker image and push it.
-      - name: Build image
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: seeyaarchive-server:${{ github.sha }}
+#      - name: Login to ECR
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
+#          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
+#          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+#      # Build the docker image and push it.
+#      - name: Build image
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: seeyaarchive-server:${{ github.sha }}
 
   #  Name of the job is deploy
   deploy:
@@ -37,12 +37,12 @@ jobs:
       # Login to docker
       # This can be used for both Docker Hub and
       # GitHub container registry.
-      - name: Login to ECR
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
-          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+#      - name: Login to ECR
+#        uses: docker/login-action@v2
+#        with:
+#          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
+#          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
+#          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
 
       # SSH into the server
       - name: executing remote ssh commands using ssh key
@@ -72,7 +72,7 @@ jobs:
           echo DB_HOST="${{ secrets.DB_HOST }}" >> .env
           echo DB_PORT="${{ secrets.DB_PORT }}" >> .env
 
+          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} build -t seeyaarchive-server:v1 /seeyaArchive
 
-          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} rm -f seeyaarchive-server
-          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} run -d --name seeyaarchive-server -p 80:8000 --env-file .env ${{ secrets.REGISTRY }}/seeyaarchive-server:${{ github.sha }}
+          docker --tlsverify --tlscacert=ca.pem --tlscert=cert.pem --tlskey=key.pem -H=${{ secrets.SERVER_HOST }}:${{ secrets.DOCKER_PORT }} run -d --name seeyaarchive-server -p 80:8000 --env-file .env seeyaarchive-server:v1
         shell: bash
