--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,8 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
-          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+          username: ${{ secrets.registry_user }}
+          password: ${{ secrets.registry_password }}
       # Build the docker image and push it.
       - name: Build image
         uses: docker/build-push-action@v2
@@ -40,9 +39,8 @@ jobs:
       - name: Login to ECR
         uses: docker/login-action@v2
         with:
-          registry: ${{ secrets.aws_account_number }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.REGISTRY }}
-          username: ${{ secrets.MY_AWS_ACCESS_KEY_ID }}
-          password: ${{ secrets.MY_AWS_SECRET_ACCESS_KEY }}
+          username: ${{ secrets.registry_user }}
+          password: ${{ secrets.registry_password }}
 
       # SSH into the server
       - name: executing remote ssh commands using ssh key
