fix : develop에 push될 시 서버 배포 설정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build API and Deploy
 on:
   push:
     branches:
-      - "feature/infrastructure-settings"
+      - "develop"
 
 jobs:
   example-job:
